# Fly-Webpage

./: Makefile  README.md  index.html  package.json  pnpm-lock.yaml
backend/: README.md  pyproject.toml
backend/src/auth_mock/: main.py
backend/src/db_api/: main.py
backend/src/db_api/atendance/adapters/api/: dependencies.py  router.py
backend/src/db_api/atendance/adapters/attendance_repository/: __init__.py  attendance_repository.py  models.py
backend/src/db_api/atendance/app/: DTOs.py  inbound.py
backend/src/db_api/atendance/domain/: core.py  entities.py  outbound.py
backend/src/db_api/shared_kernel/: __init__.py
backend/src/db_api/shared_kernel/adapters/: user_repository.py
backend/src/db_api/shared_kernel/adapters/models/: __init__.py  application.py  base.py  bussiness.py  mixins.py
backend/src/db_api/shared_kernel/app/: data_transfer_objects.py
backend/src/db_api/shared_kernel/domain/: entities.py  exceptions.py  ports.py
docs/: recommended_settings.md
src/: App.tsx
src/components/: AttendanceForm.tsx
src/styles/: AttendanceForm.css
