[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi[standard]>=0.131.0",
    "sqlalchemy>=2.0.46",
]

[dependency-groups]
dev = ["factory-boy>=3.3.3", "pytest>=9.0.2"]

[tool.setuptools.packages.find]
where = ["./src"]

[tool.pytest.ini_options]
pythonpath = "./src"
